--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -18,8 +18,8 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row text-center mb-5">
-                <div class="col-12">
+            <div class="row mb-5">
+                <div class="col-12 text-center">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                         <h1 class="fs-3 m-2 m-md-0">Список медицинских учреждений</h1>
                         <div class="m-2 m-md-0">
