--- a/src/main/resources/templates/messages/dialogue.html
+++ b/src/main/resources/templates/messages/dialogue.html
@@ -46,31 +46,29 @@
             <!---->
             <div th:replace="~{/fragments/filtration/filtration :: filtration}"></div>
             <!---->
-            <div class="row mb-5" th:each="each, status : ${dialogue}" th:classappend="${!status.last} ? 'mb-5' : 'mb-0'">
+            <div class="row" th:each="each, status : ${dialogue}" th:classappend="${!status.last} ? 'mb-5'">
                 <div class="col-12">
-                    <div>
-                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center justify-content-lg-between">
-                            <div class="mx-3 mx-lg-0" th:text="${each.authorFullName}">Вы</div>
-                            <div class="mx-3 mx-lg-0" th:text="${each.formattedDate}">19.03.2021 в 19:54:12</div>
+                    <div class="d-flex flex-row flex-wrap align-items-center justify-content-center justify-content-lg-between">
+                        <div class="mx-3 mx-lg-0" th:text="${each.authorFullName}">Вы</div>
+                        <div class="mx-3 mx-lg-0" th:text="${each.formattedDate}">19.03.2021 в 19:54:12</div>
+                    </div>
+                    <hr class="my-1" />
+                    <div th:text="${each.text}" th:attr="data-text=${each.id}" class="word-wrap">
+                        Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки форм развития. Повседневная практика показывает, что новая модель организационной деятельности требуют от нас анализа системы обучения
+                        кадров, соответствует насущным потребностям.
+                    </div>
+                    <div class="d-flex flex-row flex-wrap align-items-center justify-content-between">
+                        <div>
+                            <a th:if="${each.author.id == currentUser.userInformation.id}" href="#" th:attr="data-edit=${each.id}" class="text-decoration-none">
+                                <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
+                            </a>
+                            <a th:if="${each.author.id == currentUser.userInformation.id}" href="#" th:attr="data-delete=${each.id}" class="text-decoration-none">
+                                <img width="20" src="../../static/svg/delete.svg" th:src="@{/svg/delete.svg}" alt="Удалить" />
+                            </a>
                         </div>
-                        <hr class="my-1" />
-                        <div th:text="${each.text}" th:attr="data-text=${each.id}">
-                            Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки форм развития. Повседневная практика показывает, что новая модель организационной деятельности требуют от нас анализа системы
-                            обучения кадров, соответствует насущным потребностям.
-                        </div>
-                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-between">
-                            <div>
-                                <a th:if="${each.author.id == currentUser.userInformation.id}" href="#" th:attr="data-edit=${each.id}" class="text-decoration-none">
-                                    <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
-                                </a>
-                                <a th:if="${each.author.id == currentUser.userInformation.id}" href="#" th:attr="data-delete=${each.id}" class="text-decoration-none">
-                                    <img width="20" src="../../static/svg/delete.svg" th:src="@{/svg/delete.svg}" alt="Удалить" />
-                                </a>
-                            </div>
-                            <div th:if="${each.formattedEditingDate != null}" class="text-end fst-italic fs-6">
-                                <span>Изм.</span>
-                                <span th:text="${each.formattedEditingDate}">21.04.2022 в 15:22:36</span>
-                            </div>
+                        <div th:if="${each.formattedEditingDate != null}" class="text-end fst-italic fs-6">
+                            <span>Изм.</span>
+                            <span th:text="${each.formattedEditingDate}">21.04.2022 в 15:22:36</span>
                         </div>
                     </div>
                 </div>
