--- a/src/main/resources/templates/messages/dialogues.html
+++ b/src/main/resources/templates/messages/dialogues.html
@@ -41,7 +41,7 @@
                             <span th:if="${each.isNotActive}" class="text-danger text-lowercase fs-6" th:text="${each.currentInactivity.get.shortInactivityMessage}">На больничном</span>
                         </p>
                         <p class="fs-5 mb-1" th:text="${each.userInformation.phoneNumber}">+7 (912) 123-90-56</p>
-                        <p class="fs-5" class="mb-0"><span th:text="${each.role.alias}">Врач</span><span th:if="${each.isHospitalEmployee}" th:text="': ' + ${each.employeeInformation.post}" class="text-lowercase">Врач-кардиолог</span></p>
+                        <p class="fs-5 mb-0"><span th:text="${each.role.alias}">Врач</span><span th:if="${each.isHospitalEmployee}" th:text="': ' + ${each.employeeInformation.post}" class="text-lowercase">Врач-кардиолог</span></p>
                     </div>
                 </div>
                 <hr class="mb-0" th:if="${!status.last}" />
