--- a/src/main/resources/templates/patient_additions/achievements.html
+++ b/src/main/resources/templates/patient_additions/achievements.html
@@ -20,8 +20,10 @@
             <!---->
             <div class="row fs-5 mb-3" th:if="${!isForPatient}">
                 <h1 class="text-center fs-3 mb-3">Награды</h1>
-                <p>На этой странице приведён полный список всех наград, которые автоматически назначаются пациенту системой за определённые достижения.</p>
-                <p>Например, за отправку анамнеза пациент получит награду "Историк", за первую отправку показателя "Т6МХ" - награду "Прогулка", за 50 отправок любых показателей - награду "Упорный".</p>
+                <p th:if="${isPatient}">На этой странице приведён полный список всех наград, которые вы можете получить за определённые достижения.</p>
+                <p th:if="${isPatient}">Например, за отправку анамнеза вы получите награду "Историк", за первую отправку показателя "Т6МХ" - награду "Прогулка", за 50 отправок любых показателей - награду "Упорный".</p>
+                <p th:if="${!isPatient}">На этой странице приведён полный список всех наград, которые автоматически вручаются пациенту системой за определённые достижения.</p>
+                <p th:if="${!isPatient}">Например, за отправку анамнеза пациент получит награду "Историк", за первую отправку показателя "Т6МХ" - награду "Прогулка", за 50 отправок любых показателей - награду "Упорный".</p>
             </div>
             <!---->
             <div class="row fs-5 mb-3" th:if="${isForPatient}">
@@ -30,7 +32,7 @@
                     Здесь перечислены все ваши награды. В данный момент их:
                     <span th:text="${patient.achievementsCount}">12</span>
                 </p>
-                <p th:if="${isSelf}">
+                <p th:if="${!isSelf}">
                     Здесь перечислены все награды этого пациента. В данный момент их:
                     <span th:text="${patient.achievementsCount}">12</span>
                 </p>
