--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div th:if="${param.logout}" class="row mb-5">
+            <div class="row mb-5" th:if="${param.logout}">
                 <div class="col-12 col-md-9 col-lg-6 mx-auto">
                     <div class="text-center fs-4 info-block rounded p-2">
                         <span class="my-auto">Вы вышли из аккаунта</span>
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <!---->
-            <div th:if="${param.error}" class="row mb-5">
+            <div class="row mb-5" th:if="${param.error}">
                 <div class="col-12 col-md-9 col-lg-6 mx-auto">
                     <div class="text-center fs-4 danger-block rounded p-2">
                         <span class="my-auto">Неверный логин или пароль</span>
