Исправил баг, из-за которого не отображался диалог с главным администратором. Поправил сортировку сообщений в диалоге: теперь правильно сортирую по дате в самом сервисе и после объединения списков автора и получателя, а не в репозитории.

--- a/src/main/resources/templates/messages/dialogue.html
+++ b/src/main/resources/templates/messages/dialogue.html
@@ -18,7 +18,7 @@
         <!---->
         <div class="container text-secondary fs-5 my-5">
             <!---->
-            <div class="row mb-5" th:if="${recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive}">
+            <div class="row mb-5" th:if="${recipient.isMainAdministrator || recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive}">
                 <div class="col-12">
                     <form id="message-form">
                         <input class="visually-hidden" name="id" />
