--- a/src/main/resources/templates/messages/dialogue.html
+++ b/src/main/resources/templates/messages/dialogue.html
@@ -84,8 +84,8 @@
             <!---->
         </div>
         <!---->
-        <div th:replace="${recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive} ? ~{/fragments/modal/error-modal :: error-modal} : ~{}"></div>
-        <div th:replace="${recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive} ? ~{/fragments/modal/success-modal :: success-modal} : ~{}"></div>
+        <div th:replace="${recipient.isMainAdministrator || recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive} ? ~{/fragments/modal/error-modal :: error-modal} : ~{}"></div>
+        <div th:replace="${recipient.isMainAdministrator || recipient.isHospitalEmployee && !recipient.isDismissed || recipient.isPatient && recipient.isActive} ? ~{/fragments/modal/success-modal :: success-modal} : ~{}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
