--- a/src/main/resources/templates/fragments/headers/patient-header.html
+++ b/src/main/resources/templates/fragments/headers/patient-header.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="m-2 my-xl-0">
                         <div class="dropdown">
-                            <a aria-expanded="false" href="#" id="user" class="nav-link text-secondary break-all d-block" data-bs-toggle="dropdown">
+                            <a aria-expanded="false" href="#" id="user" class="nav-link text-secondary d-block" data-bs-toggle="dropdown">
                                 <img width="40" src="../../../static/svg/profile.svg" th:src="@{/svg/profile.svg}" alt="Вы" />
                             </a>
                             <ul aria-labelledby="user" class="dropdown-menu text-small">
