--- a/src/main/resources/templates/messages/dialogue.html
+++ b/src/main/resources/templates/messages/dialogue.html
@@ -53,7 +53,7 @@
                         <div class="mx-3 mx-lg-0" th:text="${each.formattedDate}">19.03.2021 в 19:54:12</div>
                     </div>
                     <hr class="my-1" />
-                    <div th:text="${each.text}" th:attr="data-text=${each.id}" class="word-wrap">
+                    <div th:text="${each.text}" th:attr="data-text=${each.id}" class="text-break">
                         Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки форм развития. Повседневная практика показывает, что новая модель организационной деятельности требуют от нас анализа системы обучения
                         кадров, соответствует насущным потребностям.
                     </div>
