--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -41,7 +41,7 @@
             <div class="row mb-5" th:if="${user.isHospitalUser}">
                 <div class="col-12">
                     <h3 class="fs-4">Медицинское учреждение</h3>
-                    <p class="word-wrap mb-0">
+                    <p class="text-break mb-0">
                         <a id="info-hospital" href="#" th:href="@{/hospitals/__${user.hospital.id}__}" th:text="${user.hospital.name}" class="text-secondary">Национальный медицинский исследовательский центр имени В. А. Алмазова</a>
                     </p>
                 </div>
