--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -37,27 +37,30 @@
                         <p class="fs-4 text-break mb-1">
                             <img width="24" class="mb-1" src="../../static/svg/user.svg" th:src="@{/svg/user.svg}" alt="Пользователь" />
                             <a href="#" th:href="@{/users/__${each.userInformation.id}__}" th:text="${each.userInformation.fullName}" class="text-decoration-none text-secondary"> Козлов Геннадий Петрович </a>
-                            <span th:if="${each.isActive}" class="text-success text-lowercase fs-6">Активен</span>
+                            <span th:if="${each.isActive && (param.patientId == null || !currentUser.isAdministrator || !each.isDoctor)}" class="text-success text-lowercase fs-6">Активен</span>
+                            <span th:if="${each.isActive && param.patientId != null && currentUser.isAdministrator && each.isDoctor}" class="text-success text-lowercase fs-6">
+                                <a href="#" th:if="${!each.hasPatientById(param.patientId)}" class="text-decoration-none" th:attr="data-doctor-assign=${each.id}">
+                                    <img width="24" class="mb-1" src="../../static/svg/assign-to-doctor.svg" th:src="@{/svg/assign-to-doctor.svg}" alt="Назначить" />
+                                </a>
+                                <a href="#" th:if="${each.hasPatientById(param.patientId)}" class="text-decoration-none" th:attr="data-doctor-remove=${each.id}">
+                                    <img width="24" class="mb-1" src="../../static/svg/remove-from-doctor.svg" th:src="@{/svg/remove-from-doctor.svg}" alt="Открепить" />
+                                </a>
+                            </span>
                             <span th:if="${each.isNotActive}" class="text-danger text-lowercase fs-6" th:text="${each.currentInactivity.get.shortInactivityMessage}">На больничном</span>
                         </p>
                         <p class="fs-5 mb-1" th:text="${each.userInformation.phoneNumber}">+7 (912) 123-90-56</p>
                         <p class="fs-5" th:classappend="${currentUser.isAdministrator} ? 'mb-1' : 'mb-0'">
                             <span th:text="${each.role.alias}">Врач</span><span th:if="${each.isHospitalEmployee}" th:text="': ' + ${each.employeeInformation.post}" class="text-lowercase">Врач-кардиолог</span>
                         </p>
-                        <p th:if="${currentUser.isAdministrator}" class="fs-5" th:classappend="${param.patientId != null && each.isDoctor} ? 'mb-2' : 'mb-1'">
+                        <p th:if="${currentUser.isAdministrator}" class="fs-5 mb-1">
                             <span th:if="${each.isDoctor}">
                                 <span th:if="${each.hasPatients}" class="text-success">Сейчас пациентов: <span th:text="${each.patientsCount}">5</span></span>
-                                <span th:if="${each.hasNoPatients}" class="text-danger">В данный момент находится без пациентов</span>
+                                <span th:if="${each.hasNoPatients}" class="text-danger">Не закреплён ни за одним пациентом</span>
                             </span>
                             <span th:if="${each.isPatient}">
                                 <span th:if="${each.hasDoctor}" class="text-success">Закреплён за врачом</span>
                                 <span th:if="${each.hasNoDoctor}" class="text-danger">Не закреплён за врачом</span>
                             </span>
-                        </p>
-                        <p th:if="${param.patientId != null && currentUser.isAdministrator && each.isDoctor}" class="mb-1">
-                            <button th:if="${!each.hasPatientById(param.patientId)}" class="btn btn-sm btn-success" th:attr="data-doctor=${each.id}">Назначить</button>
-                            <button th:if="${!each.hasPatientById(param.patientId) && each.isNotActive}" class="btn btn-sm btn-success" disabled>Назначить</button>
-                            <button th:if="${each.hasPatientById(param.patientId)}" class="btn btn-sm btn-danger" th:attr="data-doctor=${each.id}">Открепить</button>
                         </p>
                     </div>
                 </div>
@@ -75,6 +78,7 @@
         </div>
         <!---->
         <div th:replace="${param.patientId != null && currentUser.isAdministrator} ? ~{/fragments/modal/success-modal :: success-modal} : ~{}"></div>
+        <div th:replace="${param.patientId != null && currentUser.isAdministrator} ? ~{/fragments/modal/error-modal :: error-modal} : ~{}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
