Улучшил страницу наград пользователя, поправли работу с атрибутами при выдаче страницы достижений. В модальные окна добавил text-break, убрал это свойство из js-кода при добавлении составных сообщений об успехе.

--- a/src/main/resources/templates/fragments/modal/error-modal.html
+++ b/src/main/resources/templates/fragments/modal/error-modal.html
@@ -11,7 +11,7 @@
                         <h1 class="modal-title fs-4" id="error-modal-title">Ошибка</h1>
                         <button id="error-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body fs-5" id="error-modal-text">Здесь располагается текст ошибки. Этот блок заполняется js-кодом.</div>
+                    <div class="modal-body fs-5 text-break" id="error-modal-text">Здесь располагается текст ошибки. Этот блок заполняется js-кодом.</div>
                     <div class="modal-footer">
                         <button id="error-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
                     </div>
