--- a/src/main/resources/templates/fragments/modal/success-modal.html
+++ b/src/main/resources/templates/fragments/modal/success-modal.html
@@ -11,7 +11,7 @@
                         <h1 class="modal-title fs-4" id="success-modal-title">Успех</h1>
                         <button id="success-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body fs-5" id="success-modal-text">Здесь располагается текст сообщения об успехе. Этот блок заполняется js-кодом.</div>
+                    <div class="modal-body fs-5 text-break" id="success-modal-text">Здесь располагается текст сообщения об успехе. Этот блок заполняется js-кодом.</div>
                     <div class="modal-footer">
                         <button id="success-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
                     </div>
